syntax = "proto3";

package admin;

option go_package = "jh_user_service/api/admin/v1";

service Admin {
    rpc Login(LoginReq) returns (LoginRes) {}
    rpc RefreshToken(RefreshTokenReq) returns (RefreshTokenRes) {}
}

message LoginReq {
    string username = 1; // v: required
    string password = 2; // v: required
    string code = 3;     // Google 2FA code (optional)
}

message LoginRes {
    string token = 1;
    string socket = 2;
}

message RefreshTokenReq {}

message RefreshTokenRes {
    string token = 1;
}
