syntax = "proto3";

package ad;

option go_package = "jh_app_service/api/backend/ad/v1";

service Ad {
    rpc GetAdList(GetAdListReq) returns (GetAdListRes) {}
    rpc CreateAd(CreateAdReq) returns (CreateAdRes) {}
    rpc UpdateAd(UpdateAdReq) returns (UpdateAdRes) {}
    rpc DeleteAd(DeleteAdReq) returns (DeleteAdRes) {}
}

// 获取广告列表请求
message GetAdListReq {
    int32 page = 1;
    int32 size = 2;
    int32 status = 3;
    int32 position = 4;
}

// 获取广告列表响应
message GetAdListRes {
    repeated AdItem list = 1;
    int32 total = 2;
    int32 current_page = 3;
    int32 per_page = 4;
    repeated PositionItem position_list = 5;
    repeated StatusItem status_list = 6;
}

// 广告项
message AdItem {
    int32 id = 1;
    string title = 2;
    string image = 3;
    string link = 4;
    int32 position = 5;
    string position_name = 6;
    int32 status = 7;
    string status_name = 8;
    int32 sort = 9;
    string created_at = 10;
    string updated_at = 11;
}

// 位置项
message PositionItem {
    int32 value = 1;
    string name = 2;
}

// 状态项
message StatusItem {
    int32 value = 1;
    string name = 2;
}

// 创建广告请求
message CreateAdReq {
    string title = 1;       // v: required|length:2,100
    string image = 2;       // v: required
    string link = 3;        // v: required
    int32 position = 4;     // v: required|in:1,2,3,4,5
    int32 status = 5;       // v: required|in:0,1
    int32 sort = 6;         // v: required|min:0
}

// 创建广告响应
message CreateAdRes {}

// 更新广告请求
message UpdateAdReq {
    int32 id = 1;           // v: required|min:1
    string title = 2;       // v: required|length:2,100
    string image = 3;       // v: required
    string link = 4;        // v: required
    int32 position = 5;     // v: required|in:1,2,3,4,5
    int32 status = 6;       // v: required|in:0,1
    int32 sort = 7;         // v: required|min:0
}

// 更新广告响应
message UpdateAdRes {}

// 删除广告请求
message DeleteAdReq {
    int32 id = 1;           // v: required|min:1
}

// 删除广告响应
message DeleteAdRes {}